# rs485v3

./: .mxproject  Build.md  CMakeLists.txt  RF_IO_V3.ioc  Readme.md  STM32H523xx_FLASH.ld  STM32H523xx_RAM.ld  build.bat  flash.sh
Core/Inc/: FreeRTOSConfig.h  stm32h5xx_hal_conf.h  stm32h5xx_it.h  usart.h
Core/Src/: app_freertos.c  gpio.c  main.c  stm32h5xx_it.c  tim.c  usart.c
SynaptiX/: CMakeLists.txt
SynaptiX/app/: CMakeLists.txt
SynaptiX/app/user/indicator/: indicator.c  indicator.h
SynaptiX/app/user/modbus/: user_mb_app.c  user_mb_app.h
SynaptiX/app/user/rf/: rf_app.h
SynaptiX/app/user/shell/: shell_app.c  shell_app.h  shell_commands.c
SynaptiX/board/: CMakelists.txt  board.h
SynaptiX/bsp/: CMakeLists.txt  bsp_callbacks.c  bsp_gpio.c  bsp_gpio.h  bsp_uart.c  bsp_uart.h  bsp_usb.c  bsp_usb.h
SynaptiX/services/lora/: CMakeLists.txt  lora.c  lora.h
SynaptiX/services/modbus/: CMakeLists.txt  modbus_service.c  modbus_service.h
SynaptiX/services/modbus/mbport/: port.h  portserial.c  porttimer.c
SynaptiX/services/modbus/stack/: README.md
SynaptiX/services/modbus/stack/demo/STM32F0/: STM32F051R8TX_FLASH.ld  TestJSON.ioc  TestJSON.launch
SynaptiX/services/modbus/stack/demo/STM32F0/Core/Inc/: main.h  stm32f0xx_it.h
SynaptiX/services/modbus/stack/demo/STM32F0/Core/Src/: main.c  stm32f0xx_hal_msp.c  stm32f0xx_it.c
SynaptiX/services/modbus/stack/demo/STM32F0/port/: port.h  portserial.c  porttimer.c  user_mb_app.c  user_mb_app.h
SynaptiX/services/modbus/stack/modbus/: mb.c
SynaptiX/services/modbus/stack/modbus/ascii/: mbascii.c  mbascii.h
SynaptiX/services/modbus/stack/modbus/functions/: mbfuncother.c
SynaptiX/services/modbus/stack/modbus/include/: mb.h  mbframe.h  mbport.h
SynaptiX/services/modbus/stack/modbus/rtu/: mbrtu.c  mbrtu.h
SynaptiX/services/modbus/stack/modbus/tcp/: mbtcp.c  mbtcp.h
SynaptiX/services/modbus/stack/port/: port.h  portevent.c  portserial.c  porttimer.c  user_mb_app.c  user_mb_app.h
SynaptiX/services/shell/: CMakeLists.txt  cli_shell.c  cli_shell.h
SynaptiX/services/socket_client/: CMakeLists.txt
SynaptiX/services/socket_server/: CMakeLists.txt
SynaptiX/services/tcp_server/: CMakeLists.txt
SynaptiX/services/web_service/: CMakeLists.txt  web_service.c  web_service.h
SynaptiX/services/zigbee/: CMakeLists.txt  zigbee.c  zigbee.h
SynaptiX/utils/cqueue/: CMakeLists.txt
cmake/: starm-clang.cmake
cmake/stm32cubemx/: CMakeLists.txt
docs/: IMPLEMENTATION_READINESS_REVIEW.md  IMPLEMENTATION_READINESS_REVIEW_v2.md  KB_integration.md  KB_v2.md  KB_v2_modbus.md  KB_v2_shell.md  KB_v2_zigbee.md  KB_v3.md
libs/: CMakeLists.txt
libs/stm32-mw-lwip/: CMakeLists.txt
mongoose/: CMakeLists.txt  mongoose_config.h  mongoose_fs.c  mongoose_glue.c  mongoose_glue.h  mongoose_impl.c  mongoose_wizard.json
usb_net/: CMakeLists.txt  usb_netif.c  usb_netif.h
